about page edit

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -978,7 +978,7 @@
   bio: >
     Julia is a software engineer excited that she's figured out how to use
     technology to help people. She's committed to the challenge of
-    improving government services through integration of smart digital
+    improving government services through the integration of smart digital
     solutions. She most recently worked as an employee of NYC government,
     building sites and services to increase data access. She lives in New York.
   active: true
