update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -45,8 +45,8 @@
   full_name: Sean Johnson
   short_name: S. Johnson
   profile_path: /about/#sean-johnson
-  image: /img/people/theodore-roosevelt.png
-  image_description: Placeholder Photo of Sean Johnson
+  image: /img/people/sean-johnson.jpg
+  image_description: Photo of Sean Johnson
   position: Full Stack Engineer
   bio: >
     Sean's built and exited two tech startups, one of which was bought by
