--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -24,3 +24,11 @@
   url: https://skylight.workable.com/jobs/1095653
   location: Remote
   order: 50
+- title: UX Researcher
+  url: https://skylight.workable.com/jobs/1128363
+  location: Remote
+  order: 60
+- title: UX Designer
+  url: https://skylight.workable.com/jobs/1128366
+  location: Remote
+  order: 70
