--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "cryptiles": ">=4.1.2",
     "eslint": "^6.0.1",
+    "eslint-utils": ">=1.4.1",
+    "extend": ">=3.0.2",
     "grunt": "^1.0.4",
     "grunt-accessibility": "^6.0.0",
     "grunt-cli": "^1.3.2"
