add data engineer position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -32,3 +32,7 @@
   url: https://skylight.workable.com/jobs/1128366
   location: Remote
   order: 70
+- title: Data Engineer
+  url: https://skylight.workable.com/jobs/1145622
+  location: Remote
+  order: 80
