add open position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -36,3 +36,7 @@
   url: https://skylight.workable.com/jobs/1145622
   location: Remote
   order: 80
+- title: Data Scientist
+  url: https://skylight.workable.com/jobs/1145644
+  location: Remote
+  order: 90
