--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,39 +4,51 @@
 #   location: Washington DC
 #   order: 10
 
+- title: Vice President of Human Services
+  url: https://apply.workable.com/skylight/j/9E1132A1B6/
+  location: Remote
+  order: 10
+- title: Vice President of Delivery Excellence
+  url: https://apply.workable.com/skylight/j/2D3D1B7688/
+  location: Remote
+  order: 20
+- title: Vice President of Training Services
+  url: https://apply.workable.com/skylight/j/FB764D28B5/
+  location: Remote
+  order: 30
 - title: Product Manager
   url: https://skylight.workable.com/jobs/1083508
   location: Remote
-  order: 10
+  order: 40
 - title: Sofware Engineer
   url: https://skylight.workable.com/jobs/1083190
   location: Remote
-  order: 20
+  order: 50
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1083314
   location: Remote
-  order: 30
+  order: 60
 - title: Security Lead
   url: https://skylight.workable.com/jobs/1093809
   location: Remote
-  order: 40
+  order: 70
 - title: Digital Transformer
   url: https://skylight.workable.com/jobs/1095653
   location: Remote
-  order: 50
+  order: 80
 - title: UX Researcher
   url: https://skylight.workable.com/jobs/1128363
   location: Remote
-  order: 60
+  order: 90
 - title: UX Designer
   url: https://skylight.workable.com/jobs/1128366
   location: Remote
-  order: 70
+  order: 100
 - title: Data Engineer
   url: https://skylight.workable.com/jobs/1145622
   location: Remote
-  order: 80
+  order: 110
 - title: Data Scientist
   url: https://skylight.workable.com/jobs/1145644
   location: Remote
-  order: 90
+  order: 120
