--- a/_data/team.yml
+++ b/_data/team.yml
@@ -910,7 +910,7 @@
   profile_path: /about/#maya-benari
   image: /img/people/maya-benari.jpg
   image_description: Photo of Maya Benari
-  position: UX Developer
+  position: UX Designer
   bio: >
     Maya is a former member of 18F where she worked on improving
     the user experience of government and developed the U.S.
