--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -6,49 +6,61 @@
 
 - title: Vice President of Human Services
   url: https://apply.workable.com/skylight/j/9E1132A1B6/
+  category: Program Delivery
   location: Remote
   order: 10
 - title: Vice President of Delivery Excellence
   url: https://apply.workable.com/skylight/j/2D3D1B7688/
+  category: Program Delivery
   location: Remote
   order: 20
 - title: Vice President of Training Services
   url: https://apply.workable.com/skylight/j/FB764D28B5/
+  category: Program Delivery
   location: Remote
   order: 30
 - title: Product Manager
   url: https://skylight.workable.com/jobs/1083508
+  category: Product
   location: Remote
   order: 40
 - title: Sofware Engineer
   url: https://skylight.workable.com/jobs/1083190
+  category: Engineering
   location: Remote
   order: 50
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1083314
+  category: Engineering
   location: Remote
   order: 60
 - title: Security Lead
   url: https://skylight.workable.com/jobs/1093809
+  category: Engineering
   location: Remote
   order: 70
 - title: Digital Transformer
   url: https://skylight.workable.com/jobs/1095653
+  category: Transformation
   location: Remote
   order: 80
 - title: UX Researcher
   url: https://skylight.workable.com/jobs/1128363
+  category: Research
   location: Remote
   order: 90
 - title: UX Designer
   url: https://skylight.workable.com/jobs/1128366
+  category: Design
   location: Remote
   order: 100
 - title: Data Engineer
   url: https://skylight.workable.com/jobs/1145622
+  category: Engineering
   location: Remote
   order: 110
 - title: Data Scientist
   url: https://skylight.workable.com/jobs/1145644
+  category: Engineering
   location: Remote
   order: 120
