--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -5,7 +5,8 @@
 #   order: 10
 
 # Categories:
-# Research, Design, Product, Engineering, Data, Program Delivery, Transformation, Corporate
+# Research, Design, Product, Engineering, Data, Program Delivery,
+# Procurement, Transformation, Corporate
 
 - title: UX Researcher
   url: https://skylight.workable.com/jobs/1128363
