--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ collections:
 # Pagination Settings
 pagination:
   enabled: true
+  debug: true
   per_page: 12
   offset: 0
   permalink: '/page/:num/'
