--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -6,7 +6,7 @@
 
 # Categories:
 # Research, Design, Product, Engineering, Data, Program Delivery,
-# Procurement, Transformation, Corporate
+# Procurement, Transformation, Business Strategy & Operations
 
 - title: UX Researcher
   url: https://skylight.workable.com/jobs/1128363
@@ -55,16 +55,16 @@
   order: 90
 - title: Vice President of Human Services
   url: https://apply.workable.com/skylight/j/9E1132A1B6/
-  category: Corporate
+  category: Business Strategy & Operations
   location: Remote
   order: 100
 - title: Vice President of Delivery Excellence
   url: https://apply.workable.com/skylight/j/2D3D1B7688/
-  category: Corporate
+  category: Business Strategy & Operations
   location: Remote
   order: 110
 - title: Vice President of Training Services
   url: https://apply.workable.com/skylight/j/FB764D28B5/
-  category: Corporate
+  category: Business Strategy & Operations
   location: Remote
   order: 120
