add content for toolkits, contracting pages and some other changes

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -9,7 +9,7 @@
   position: Digital Transformer
   bio: >
     Chris served as a Presidential Innovation Fellow, and co-founded 18F
-    and the Technology Transformation Service, both housed within the General Services
+    and Technology Transformation Services, both housed within the General Services
     Administration. He specializes in digital leadership and transformation,
     digital procurement, and product development and management. Chris lives in Florida.
   active: true
