--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -5,7 +5,7 @@
 #   order: 10
 
 # Categories:
-# Research, Design, Product, Engineering, Data, Program Delivery,
+# Research, Design, Product, Engineering, Data, Delivery Management,
 # Procurement, Transformation, Business Strategy & Operations
 
 - title: UX Researcher
