Add jekyll variable for impact statement

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -12,6 +12,7 @@
   url: https://skylight.workable.com/jobs/1128363
   category: Research
   location: Remote
+  summary: Optional impact sentence about what this role does and what makes it special. What makes this role meaningful, beyond just being a job.
   order: 10
 - title: UX Designer
   url: https://skylight.workable.com/jobs/1128366
