Make press into collection

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,9 @@ collections:
   policies:
     output: true
     permalink: /company/policies/:path/
+  press:
+    output: false
+    permalink: /company/press/:path/
 
 # Pagination Settings
 pagination:
