--- a/_data/team.yml
+++ b/_data/team.yml
@@ -302,7 +302,7 @@
   image_description: Photo of Victor Zapanta
   position: UX Designer
   bio: >
-    Victor co-founded the Consumer Financial Protection Bureau's design+tech team,
+    Victor co-founded the Consumer Financial Protection Bureau's Design+Tech team,
     and served as a member of 18F. His design leadership spans multiple high-profile
     projects, including data.gov, foia.gov, my.uscis.gov, and cloud.gov. He specializes
     in design leadership, service design, user experience design, and design research.
@@ -397,7 +397,7 @@
   bio: >
     Shashank is a former member of 18F, where he held multiple leadership positions,
     including Director of cloud.gov. He's also a former Consumer Financial Protection
-    Bureau design+tech fellow. Shashank specializes in digital leadership and transformation,
+    Bureau Design+Tech fellow. Shashank specializes in digital leadership and transformation,
     digital procurement, software engineering, and cloud computing. He lives in Maryland.
   active: true
   order: 50
