Add first 3 parts of Digital Talent Management Playbook

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -7,9 +7,7 @@ digital_talent_management:
     - title: Understanding your talent gaps
       url: /work/toolkits/digital-talent-management/understanding-your-talent-gaps/
     - title: Developing a digital talent strategy
-      url: #0
-    - title: Building a digital team
-      url: #0
+      url: /work/toolkits/digital-talent-management/developing-a-digital-talent-strategy/
 
 data_sharing_playbook:
   title: Data Sharing Playbook
