Adding building a digital team section

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -8,6 +8,8 @@ digital_talent_management:
       url: /work/toolkits/digital-talent-management/understanding-your-talent-gaps/
     - title: Developing a digital talent strategy
       url: /work/toolkits/digital-talent-management/developing-a-digital-talent-strategy/
+    - title: Building a digital team
+      url: /work/toolkits/digital-talent-management/building-a-digital-team
 
 data_sharing_playbook:
   title: Data Sharing Playbook
