--- a/_data/values.yml
+++ b/_data/values.yml
@@ -30,7 +30,8 @@
   order: 50
 - title: Reward results, not activity.
   statement: >
-    Merit &mdash; not politics &mdash; is favored above all else. We employ a performance system
+    We value delivery on client work, contributions to the company, personal and professional
+    growth, and helping each other out above all else. We employ a performance system
     that's fair, clear, and objective to measure results.
   order: 60
 - title: Collaborate for the win.
@@ -49,8 +50,7 @@
   order: 80
 - title: Change for the better &mdash; every day.
   statement: >
-    Big results come from small changes accumulated over time. We foster a
-    culture where everyone proactively works together to achieve regular,
+    Big results come from small changes accumulated over time. We foster environments where everyone proactively works together to achieve regular,
     incremental improvements to the organization.
   order: 90
 - title: Pursue modern ways of working.
